	Don't set selection index to 0, if apopup button doesn't have a
	selection. Patch by Andreas Höschler <ahoesch@smartsoft.de>.

2006-02-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMenuView.m: ([-sizeToFit]) Fix bug #15631
	([-locationForSubmenu:]) for horizontal root menus, make successive
	submenus be positioned with top left corner next to item in parent.

2006-02-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMenu.m:
	* Source/NSApplication.m:
	* Source/NSMenuItemCell.m:
	* Headers/AppKit/NSMenuItemCell.h:
	Tidyups suggested by Fred. More ideas welcome.
	* Source/NSMenuView.m: When tracking mouse for horizontal MacOS-X
	style menu, ignore an immediate mouse up and continue tracking until
	something is clicked on.  This is the behavior of MacOS-X and windows.

2006-02-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMenu.m:
	* Source/NSApplication.m:
	* Source/NSMenuItemCell.m:
	* Source/NSMenuView.m:
	* Headers/AppKit/NSMenuView.h:
	* Headers/AppKit/NSMenu.h:
	* Headers/AppKit/NSMenuItemCell.h:
	Add support for horizontal main menu (as in MacOS-X) very heavily
	based on the WildMenus bundle by Michael Hanni, but any errors in
	the integration are entirely mine.
	Horizontal menus are activated by setting the 'NSMenuInterfaceStyle'
	user default to 'NSMacintoshInterfaceStyle'.

2006-02-03  Quentin Mathe <qmathe@club-internet.fr>

    * Source/NSToolbarItem.m (-[GSToolbarButtonCell setImagePosition:]): 
    New method to override NSButtonCell behavior. It should be the last commit
    needed to correct bug #15112 (reported by Wolfgang Sourdeau). Precisely it
    eliminates the default title set with separator or space toolbar
    items and the image release with toolbar items which include one (both
    issues occurs when NSToolbarDisplayModeLabelnOnly is set).

2006-02-03  Quentin Mathe <qmathe@club-internet.fr>

    * Source/NSButtonCell.m (-setImagePosition:): Fixed the title lost (reset to